--- a/ch04.ipynb
+++ b/ch04.ipynb
@@ -31,9 +31,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 7 8 9 10 "
+     ]
+    }
+   ],
    "source": [
     "i = 0\n",
     "while (i < 10):\n",
@@ -43,9 +51,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 3 4 5 6 7 8 9 "
+     ]
+    }
+   ],
    "source": [
     "i = 0\n",
     "while ( i< 10):\n",
@@ -55,9 +71,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 2 4 6 8 "
+     ]
+    }
+   ],
    "source": [
     "i = 0\n",
     "while ( i < 10):\n",
@@ -67,9 +91,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 9 8 7 6 5 4 3 2 1 "
+     ]
+    }
+   ],
    "source": [
     "i = 10\n",
     "while ( i > 0):\n",
@@ -89,14 +121,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n"
+     ]
+    }
+   ],
    "source": [
     "begin = 10\n",
     "end = 20\n",
     "\n",
-    "while # complete the code"
+    "while begin <= end:\n",
+    "    print(begin)\n",
+    "    begin += 2 "
    ]
   },
   {
@@ -115,15 +162,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n"
+     ]
+    }
+   ],
    "source": [
     "begin = int(input('Enter the starting value: '))\n",
     "end = int(input('Enter the end value: '))\n",
     "\n",
     "# Complete the code to print from begin to end\n",
-    "while # complete the code\n"
+    "while begin <= end:\n",
+    "    print(begin)\n",
+    "    begin += 1\n"
    ]
   },
   {
@@ -140,13 +206,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 6 9 12 15 18 21 24 27 "
+     ]
+    }
+   ],
    "source": [
     "num = int(input('Enter a number: '))\n",
     "\n",
-    "while # complete the code "
+    "i = 1\n",
+    "while i <= 9:\n",
+    "    print (num * i, end=' ')\n",
+    "    i += 1"
    ]
   },
   {
@@ -179,14 +256,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 8 9 10 "
+     ]
+    }
+   ],
    "source": [
     "start = int(input('Enter a number: '))\n",
     "end = int(input('Enter a number: '))\n",
     "\n",
-    "# complete the code"
+    "if start < end:\n",
+    "    while start <= end:\n",
+    "        print(start, end=' ')\n",
+    "        start += 1\n",
+    "        \n",
+    "else:\n",
+    "    while end <= start:\n",
+    "        print(end, end=' ')\n",
+    "        end += 1"
    ]
   },
   {
@@ -203,9 +296,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The total from 1 to 5 is 15\n"
+     ]
+    }
+   ],
    "source": [
     "num = int(input('Enter a number: '))\n",
     "val = 1\n",
@@ -223,23 +324,23 @@
    "source": [
     "#### <p style=\"font-family: Arial; font-size:1.4em; background-color: yellow; color:black;\"> Problem #1.7 </p>\n",
     "\n",
-    "#### Complete the code to get the summation between 'start'(inclusive) and 'end'(inclusive)\n",
+    "####  Complete the code to get the summation between 'start'(inclusive) and 'end'(inclusive)\n",
     "#### Assume that 'start' < 'end'  \n",
-    "> For example, if 'start' = 5, 'end' = 10, it will print 45 because 5+6+7+8+9+10=15 <br> \n",
+    "> For example, if 'start'= 5, 'end' = 10, it will print 45 because 5+6+7+8+9+10=15 <br> \n",
     "> if 'start' = 10, 'end'= 20,  it will print 165 because 10+11+12+13+14+15+16+17+18+19+20 = 165 <br>\n",
     "> Use the <font color='red'> while loop </font> <br>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The total from 10 to 20 is 165\n"
+      "45\n"
      ]
     }
    ],
@@ -247,7 +348,14 @@
     "start = int(input('Enter a number: '))\n",
     "end = int(input('Enter a number: '))\n",
     "\n",
-    "# complete the code"
+    "summation = 0\n",
+    "\n",
+    "while start <= end:\n",
+    "    summation += start\n",
+    "    start += 1\n",
+    "\n",
+    "print (f'{summation}')\n",
+    "\n"
    ]
   },
   {
@@ -265,16 +373,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12\n",
-      "15\n",
-      "18\n"
+      "3\n",
+      "6\n",
+      "9\n"
      ]
     }
    ],
@@ -305,15 +413,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 6 9 "
+     ]
+    }
+   ],
    "source": [
     "seed = int(input('Enter the seed number for multiplication: '))\n",
     "start = int(input('Enter a number: '))\n",
     "end = int(input('Enter a number: '))\n",
     "\n",
-    "# complete the code"
+    "while start <= end:\n",
+    "    if start % seed ==0:\n",
+    "        print(start, end=' ')\n",
+    "    start += 1\n",
+    "\n"
    ]
   },
   {
@@ -333,9 +453,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "10\n",
+      "15\n",
+      "20\n"
+     ]
+    }
+   ],
    "source": [
     "total = 0\n",
     "number = int(input('Enter a number: '))\n",
@@ -363,15 +494,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The total of input numbers are 195\n"
+     ]
+    }
+   ],
    "source": [
     "number = int(input('Enter a number '))\n",
     "total = 0\n",
     "while total <= 100:\n",
-    "    # complete the code\n",
     "    number = int(input('Enter a number '))\n",
+    "    total += number\n",
     "print (f'The total of input numbers are {total}')"
    ]
   },
@@ -393,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +563,7 @@
        "('s', 'i', 'b')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -454,14 +593,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a b c d e f "
+     ]
+    }
+   ],
    "source": [
     "start = input('Enter a starting letter: ')\n",
-    "end = input('Enter a starting letter: ')\n",
+    "end = input('Enter an ending letter: ')\n",
     "\n",
-    "# complete your code to print all the letters between 'start' and 'end' \n",
+    "if start < end:\n",
+    "    while start <= end:\n",
+    "        print(start, end=' ')\n",
+    "        start = chr(ord(start) + 1)\n",
     "\n"
    ]
   },
@@ -481,14 +631,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a\tb\tc\t"
+      "a\tb\tp\t"
      ]
     }
    ],
@@ -501,16 +651,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Invalid Input. Try again\n",
-      "Invalid Input. Try again\n",
-      " user input is  5\n"
+      " user input is  0\n"
      ]
     }
    ],
@@ -2071,7 +2219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4
  },
