--- a/ch04.ipynb
+++ b/ch04.ipynb
@@ -704,9 +704,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 3 4 5 6 7 8 9 "
+     ]
+    }
+   ],
    "source": [
     "for i in range(10):\n",
     "    print (i, end = ' ')"
@@ -714,9 +722,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 3 4 "
+     ]
+    }
+   ],
    "source": [
     "for num in range(5):\n",
     "\tprint (num, end=' ')"
@@ -731,11 +747,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 3 4 5 6 7 8 9 10 "
+     ]
+    }
+   ],
    "source": [
-    "for val # complete the code \n",
+    "for val in range(11):\n",
     "    print (val, end=' ')"
    ]
   },
@@ -749,9 +773,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(0, 10):\n",
     "    print (i)"
@@ -759,9 +800,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(1,10):\n",
     "    print (i)"
@@ -769,9 +826,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(5,10):\n",
     "    print (i)"
@@ -779,9 +848,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(0, 10, 2):\n",
     "    print (i)"
@@ -789,9 +870,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "10\n",
+      "15\n",
+      "20\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(5, 25, 5):\n",
     "    print (i)"
@@ -806,11 +898,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10, 12, 14, 16, 18, 20 "
+     ]
+    }
+   ],
    "source": [
-    "for i in # complete the code"
+    "for i in range(10,21,2):\n",
+    "    print(i, end=', ' if i < 20 else ' ')"
    ]
   },
   {
@@ -823,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,9 +934,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(10, 0, -1): \n",
     "    print (i)"
@@ -843,9 +961,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "8\n",
+      "6\n",
+      "4\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(10, 0, -2):\n",
     "    print (i)"
@@ -860,12 +990,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "12\n",
+      "9\n",
+      "6\n",
+      "3\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "for i in # complete the code\n",
-    "    print (i)"
+    "for i in range(15, -1,-3):\n",
+    "    print(i)"
    ]
   },
   {
@@ -889,9 +1032,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "for val in [0,1,2,3,4]:\n",
     "    print (val)"
@@ -899,9 +1054,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Java Python C++ R Ruby Java Script "
+     ]
+    }
+   ],
    "source": [
     "for str in ['Java', 'Python', 'C++', 'R', 'Ruby', 'Java Script']:\n",
     "\tprint (str, end=' ')"
@@ -909,9 +1072,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n",
+      "30\n",
+      "10\n",
+      "20\n",
+      "30\n"
+     ]
+    }
+   ],
    "source": [
     "for val in [10, 20, 30]:\n",
     "\tprint (val)\n",
@@ -932,9 +1108,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Summation is 18\n"
+     ]
+    }
+   ],
    "source": [
     "total  = 0\n",
     "for  i in range(5):\n",
@@ -952,9 +1136,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Summation is 20\n"
+     ]
+    }
+   ],
    "source": [
     "sum = 0\n",
     "i = 0\n",
@@ -967,9 +1159,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n"
+     ]
+    }
+   ],
    "source": [
     "i = 0\n",
     "\n",
@@ -989,14 +1199,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total 15\n"
+      "Total 21\n"
      ]
     }
    ],
@@ -1017,9 +1227,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total 45\n"
+     ]
+    }
+   ],
    "source": [
     "i = 0\n",
     "while (i < 5):\n",
@@ -1038,11 +1256,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total 45\n"
+     ]
+    }
+   ],
    "source": [
-    "for # complete the code"
+    "total = 0\n",
+    "for i in range(5):\n",
+    "    number = int(input('Enter a number: '))\n",
+    "    total = total + number\n",
+    "    \n",
+    "print ('Total {0}'.format(sum))"
    ]
   },
   {
@@ -1054,11 +1285,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "65\n"
+     ]
+    }
+   ],
    "source": [
-    "for # complete the code"
+    "for i in range(10):\n",
+    "    number = int(input('Enter an even number: '))\n",
+    "    while number % 2 != 0:\n",
+    "        number = int(input('Enter an even number: '))\n",
+    "    total += number\n",
+    "    \n",
+    "print(total)"
    ]
   },
   {
@@ -1073,11 +1318,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#####  💯 Make your answer here with MD syntax\n",
+    "#####  💯 a for-loop has a fixed number of loop cycles while a while-loop has a variable number of loop cycles that depend on a condition\n",
     "- bullet\n",
     "> code\n",
     "<font color='red'> MD syntax example </font>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
