--- a/ch04.ipynb
+++ b/ch04.ipynb
@@ -1369,16 +1369,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "54"
+       "91"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1392,14 +1392,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The generated random number is 6, 5 and 5\n"
+      "The generated random number is 9, 3 and 3\n"
      ]
     }
    ],
@@ -1427,11 +1427,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
-    "# complete the code"
+    "import random\n",
+    "\n",
+    "rdnum = random.randint(10, 20)\n",
+    "print (rdnum)"
    ]
   },
   {
@@ -1443,14 +1454,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18 18 11 15 10 "
+      "17 19 15 19 15 "
      ]
     }
    ],
@@ -1471,11 +1482,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "15\n",
+      "19\n",
+      "12\n",
+      "14\n",
+      "Sum: 72\n"
+     ]
+    }
+   ],
    "source": [
-    "# complete the code here"
+    "import random\n",
+    "\n",
+    "total_sum = 0\n",
+    "\n",
+    "for i in range(5):\n",
+    "    rdnum = random.randint(10, 20)\n",
+    "    total_sum += rdnum\n",
+    "    print (rdnum)\n",
+    "    \n",
+    "print('Sum:', total_sum)"
    ]
   },
   {
@@ -1489,14 +1522,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8 1 6 7 4 \n",
+      "3 8 0 0 1 \n",
       "The greatest random number is 8\n"
      ]
     }
@@ -1524,11 +1557,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "5\n",
+      "lowest number: 0\n"
+     ]
+    }
+   ],
    "source": [
-    "# complete the code here"
+    "import random\n",
+    "\n",
+    "lowest_number = float ('inf')\n",
+    "\n",
+    "for _ in range(5):\n",
+    "    rdnum = random.randint(0, 10)\n",
+    "    print (rdnum)\n",
+    "    \n",
+    "    if rdnum < lowest_number:\n",
+    "        lowest_number = rdnum\n",
+    "        \n",
+    "print ('lowest number:', lowest_number)\n",
+    "    "
    ]
   },
   {
@@ -1543,9 +1601,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35 82 "
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "flag = 1 \n",
