--- a/ch04.ipynb
+++ b/ch04.ipynb
@@ -1655,9 +1655,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n",
+      "30\n",
+      "40\n",
+      "50\n"
+     ]
+    }
+   ],
    "source": [
     "mylist = [10, 20, 30, 40, 50]\n",
     "print (mylist[0])\n",
@@ -1669,9 +1681,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "150\n"
+     ]
+    }
+   ],
    "source": [
     "mylist = [10, 20, 30, 40, 50]\n",
     "total = mylist[0] + mylist[1] + mylist[2] + mylist[3] + mylist[4]\n",
@@ -1687,9 +1707,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 20 30 40 50 "
+     ]
+    }
+   ],
    "source": [
     "mylist = [10, 20, 30, 40, 50]\n",
     "for idx in range(5):\n",
@@ -1705,9 +1733,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50 40 30 20 10 "
+     ]
+    }
+   ],
    "source": [
     "mylist = [10, 20, 30, 40, 50]\n",
     "for idx in range(4, -1, -1):\n",
@@ -1723,9 +1759,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 3 2 1 0 "
+     ]
+    }
+   ],
    "source": [
     "for i in reversed(range(5)):\n",
     "    print (i, end=' ')  # it will print 4 3 2 1 0, # Now you can these sequence to access the elements"
@@ -1733,14 +1777,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100 88 77 56 45 "
+      "50 40 30 20 10 "
      ]
     }
    ],
@@ -1759,9 +1803,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11 22 33 44 55 "
+     ]
+    }
+   ],
    "source": [
     "mylist = [11, 22, 33, 44, 55]\n",
     "\n",
@@ -1780,15 +1832,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "150\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "mylist = [10, 20, 30, 40, 50]\n",
     "total = 0\n",
     "\n",
-    "# Complete the code"
+    "for value in mylist:\n",
+    "    total += value\n",
+    "\n",
+    "print (total)"
    ]
   },
   {
@@ -1810,12 +1873,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lowest number: 10\n"
+     ]
+    }
+   ],
    "source": [
     "mylist = [10, 20, 30, 40, 50]\n",
-    "# complete your code\n"
+    "minval = float('inf')\n",
+    "\n",
+    "for value in mylist:\n",
+    "    if value < minval:\n",
+    "        minval = value\n",
+    "        \n",
+    "print ('lowest number:', minval)\n"
    ]
   },
   {
@@ -1833,13 +1910,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "target = int(input('Enter a number: '))\n",
+    "mylist = [10, 20, 30, 40, 50]\n",
+    "found = False\n",
     "\n",
-    "for # complete the code"
+    "for value in mylist:\n",
+    "    if value == target:\n",
+    "        print(True)\n",
+    "        break\n",
+    "\n",
+    "else:\n",
+    "    print(False)"
    ]
   },
   {
