--- a/ch04.ipynb
+++ b/ch04.ipynb
@@ -1968,9 +1968,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(5):\n",
     "    if i == 3:\n",
@@ -1988,9 +1996,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 3 4 5 6 7 8 9 "
+     ]
+    }
+   ],
    "source": [
     "i = 0\n",
     "while True:\n",
@@ -2011,13 +2027,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "while True:\n",
     "    number = int(input('Enter a number: '))\n",
-    "    # complete the code\n",
+    "    \n",
+    "    if number == -1:\n",
+    "        break\n",
+    "    \n",
     "    print (number)"
    ]
   },
@@ -2032,13 +2060,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fanned\n",
+      "\n",
+      "repo\n"
+     ]
+    }
+   ],
    "source": [
     "while True:\n",
     "    word = input('Enter a word: ')\n",
-    "    if # complete your code\n",
+    "    if word == 'stop':\n",
+    "        break\n",
+    "    \n",
     "    print(word)"
    ]
   },
