--- a/ch04.ipynb
+++ b/ch04.ipynb
@@ -2109,7 +2109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -2146,7 +2146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -2178,14 +2178,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 2 -1 "
+      "10 15 -1 "
      ]
     }
    ],
@@ -2218,7 +2218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -2253,7 +2253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -2285,9 +2285,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value 10 is in the list\n"
+     ]
+    }
+   ],
    "source": [
     "number = int(input('Enter a number: '))\n",
     "mylist = [10, 12, 14, 16, 18, 20]\n",
@@ -2295,7 +2303,7 @@
     "for i in range(len(mylist)):\n",
     "    if number == mylist[i]:\n",
     "        print (f'The value {number} is in the list')\n",
-    "        # complete the code\n",
+    "        break\n",
     "else:\n",
     "    print (f'The value {number} is not in the list')"
    ]
