--- a/ch04.ipynb
+++ b/ch04.ipynb
@@ -2342,7 +2342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -2372,14 +2372,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a b d d e s "
+      "a s e g "
      ]
     }
    ],
@@ -2411,7 +2411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -2419,7 +2419,7 @@
      "output_type": "stream",
      "text": [
       "Invalid input: Value Error\n",
-      "10\n"
+      "3\n"
      ]
     }
    ],
@@ -2441,9 +2441,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid input: Value Error\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "while True:\n",
     "\ttry:\n",
