--- a/ch04.ipynb
+++ b/ch04.ipynb
@@ -2498,9 +2498,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0\n",
+      "0 1\n",
+      "0 2\n",
+      "0 3\n",
+      "0 4\n",
+      "1 0\n",
+      "1 1\n",
+      "1 2\n",
+      "1 3\n",
+      "1 4\n",
+      "2 0\n",
+      "2 1\n",
+      "2 2\n",
+      "2 3\n",
+      "2 4\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(3):\n",
     "    for j in range(5):\n",
@@ -2509,9 +2531,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 0) (0, 1) (0, 2) (0, 3) (0, 4) \n",
+      "(1, 0) (1, 1) (1, 2) (1, 3) (1, 4) \n",
+      "(2, 0) (2, 1) (2, 2) (2, 3) (2, 4) \n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(3):\n",
     "\tfor j in range(5):\n",
@@ -2536,12 +2568,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 0) (0, 1) (0, 2) \n",
+      "(1, 0) (1, 1) (1, 2) \n",
+      "(2, 0) (2, 1) (2, 2) \n",
+      "(3, 0) (3, 1) (3, 2) \n",
+      "(4, 0) (4, 1) (4, 2) \n"
+     ]
+    }
+   ],
    "source": [
-    "for i in range(# Complete the code):\n",
-    "    for j in range(# Complete the code):\n",
+    "for i in range(5):\n",
+    "    for j in range(3):\n",
     "        print (f'({i}, {j})', end=' ')\n",
     "    print()"
    ]
@@ -2561,12 +2605,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 0) (0, 1) (0, 2) (0, 3) \n",
+      "(1, 0) (1, 1) (1, 2) (1, 3) \n",
+      "(2, 0) (2, 1) (2, 2) (2, 3) \n"
+     ]
+    }
+   ],
    "source": [
-    "for i in range(# Complete the code):\n",
-    "    for j in range(# Complete the code):\n",
+    "for i in range(3):\n",
+    "    for j in range(4):\n",
     "        print (f'({i}, {j})', end=' ')\n",
     "    print()"
    ]
@@ -2584,7 +2638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -2608,7 +2662,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Your answer:\n",
+    "#### Your answer: (9,0) (9,1) (9,2) (8,0) (8,1) (8,2) (7,0) (7,1) (7,2) The output are all the values between 9 and ending just before 6. The '-1' means that the sequence decrements by 1 each time. For the inner loop (j), range(3) will generate 0, 1, 2.\n",
     "#### What is the output? Why?\n",
     "***"
    ]
@@ -2618,6 +2672,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0,0) (0,1) (0,2) (0,3) (0,4) \n",
+      "(1,1) (1,2) (1,3) (1,4) \n",
+      "(2,2) (2,3) (2,4) \n",
+      "(3,3) (3,4) \n",
+      "(4,4) \n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(5):\n",
     "\tfor j in range(i, 5):\n",
@@ -2629,16 +2702,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Your answer:\n",
+    "#### Your answer: (0,0) (0,1) (0,2) (0,3) (0,4) (1,1) (1,2) (1,3) (1,4) (2,2) (2,3) (2,4) (3,3) (3,4) (4,4) The outer loop takes the value from 0 to 4. The inner loop starts from the current value of i to 4. Every pair where j >= i is printed.\n",
+    "***\n",
     "#### What is the output? Why?\n",
     "***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0,0) (0,1) (0,2) \n",
+      "(1,1) (1,2) \n",
+      "(2,2) \n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(3):\n",
     "\tfor j in range(i,3):\n",
@@ -2650,21 +2734,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Your answer:\n",
+    "#### Your answer: (0,0) (0,1) (0,2) (1,1) (1,2) (2,2) The other loop is 0-2. The inner loop starts from the current value of i-2. Every pair where j >= i is printed.\n",
+    "\t\n",
     "#### What is the output? Why?\n",
     "***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "(1,0) \n",
+      "(2,0) (2,1) \n",
+      "(3,0) (3,1) (3,2) \n",
+      "(4,0) (4,1) (4,2) (4,3) \n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(5):\n",
     "\tfor j in range(0, i):\n",
     "\t\tprint (f'({i},{j})', end=' ')\n",
     "\tprint ( )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## (1,0) (2,0) (2,1) (3,0) (3,1) (3,2) (4,0) (4,1) (4,2) (4,3)\n",
+    "## The outer loop is 0 to 4. The inner loop set j from 0 to i-1 ( no output when i=0 and increasing numbers when i increases.) Pairs where j < i are printed."
    ]
   }
  ],
